# app-plugin-1inch

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  build  build.bat  launch-speculos  launch-usb  launch.bat  ledger_app.toml  null.d
.clusterfuzzlite/: Dockerfile
.github/workflows/: ci-workflow.yml  lint-workflow.yml  release-build.yml
app-tests/: package.json
app-tests/patches/: @ledgerhq+cryptoassets+6.0.2.patch
app-tests/src/: 1inch-swap-transactions.spec.ts
apps/: ethereum.elf
fuzzing/: CMakeLists.txt  README.md  fuzz_plugin.c  mocks.c  mocks.h
src/: contract.c  debug_write.c  debug_write.h  handle_finalize.c  handle_init_contract.c  handle_provide_parameter.c  handle_provide_token.c  handle_query_contract_id.c  handle_query_contract_ui.c  main.c  one_1inch_plugin.c  one_1inch_ui.c  one_inch_plugin.h  plugin.h  printf.c  provide_parameters.c
src/dbg/: printf.c
tests/: .eslintrc.js  build_local_test_elfs.sh  eth2_input_data_hashing.py  globalsetup.js  jest.config.js  package.json  tsconfig.json
tests/elfs/: 1inch.elf  1inch_nanos.elf  1inch_nanosp.elf  1inch_nanox.elf  ethereum.elf  ethereum_nanos.elf  ethereum_nanosp.elf  ethereum_nanox.elf  paraswap.elf
tests/networks/polygon/: b2c.json
tests/patches/: @zondax+zemu+0.16.5.patch
tests/src/: generate_plugin_config.js  megaswap.test.js  multiswap.test.js  simpleswap.test.js  swap_known_to_known.test.js  swap_known_to_unknown.test.js  swap_on_uniswap.test.js  swap_on_uniswap_fork.test.js  swap_unknown_to_native.test.js  test.fixture.js  test.fixture.ts  unoswap_known.test.js  unoswap_native.test.js  unoswap_unknown.test.js
tests/src/V3/: swap_known_to_known.test.js  swap_known_to_known_ethereum.test.js  swap_known_to_known_polygon.test.js  swap_known_to_unknown.test.js  swap_known_to_unknown_ethereum.test.js  swap_native_to_known_polygon.test.js  swap_unknown_to_known_polygon.test.js  swap_unknown_to_native.test.js  swap_unknown_to_native_ethereum.test.js  unoswap_known.test.js  unoswap_known_ethereum.test.js  unoswap_known_polygon.test.js  unoswap_native.test.js  unoswap_native_ethereum.test.js  unoswap_native_polygon.test.js  unoswap_unknown.test.js  unoswap_unknown_ethereum.test.js  unoswap_unknown_polygon.test.js
tests/src/V4/: clipper_swap_ethereum.test.js  clipper_swap_known_to_known_ethereum.test.js  clipper_swap_known_to_known_ethereum.test.ts  clipper_swap_native_to_known_ethereum.test.js  clipper_swap_native_to_known_ethereum.test.ts  clipper_swap_to_with_permit_ethereum.test.js  clipper_swap_to_with_permit_known_to_known_ethereum.test.js  clipper_swap_to_with_permit_known_to_known_ethereum.test.ts  clipper_swap_to_with_permit_known_to_native_ethereum.test.js  clipper_swap_to_with_permit_known_to_native_ethereum.test.ts  fill_order_rfq_ethereum.test.js  fill_order_rfq_ethereum.test.ts  fill_order_rfq_polygon.test.js  fill_order_rfq_polygon.test.ts  fill_order_rfq_to_with_permit_ethereum.test.js  fill_order_rfq_to_with_permit_ethereum.test.ts  fill_order_rfq_to_with_permit_polygon.test.js  fill_order_rfq_to_with_permit_polygon.test.ts  swap_known_to_known.test.js  swap_known_to_known_ethereum.test.js  swap_known_to_known_ethereum.test.ts  swap_known_to_known_polygon.test.js  swap_known_to_known_polygon.test.ts  swap_known_to_native_polygon.test.js  swap_known_to_native_polygon.test.ts  swap_known_to_unknown.test.js  swap_known_to_unknown_polygon.test.js  (+36 more)
(+57 files in other folders)
